The problem with copy-pasting in the tree view is fixed.

BUG: 291749